<resources>
    <string name="app_name">Coin Tracker</string>
    <string name="market">Market</string>
    <string name="favorites">Favorites</string>
    <string name="cointracker_logo">CoinTracker Logo</string>
    <string name="search">Search</string>
    <string name="search_coins">Search coins</string>
    <string name="sort">Sort</string>
    <string name="coin_logo">coin_logo</string>
    <string name="no_internet">Internet connection is not available. </string>
    <string name="no_coins_available">There are no coins available.</string>
    <string name="vs_usd">/ USD</string>
    <string name="name_vol">Name / Vol</string>
    <string name="last_price">Last Price</string>
    <string name="percentage_change_24h">24h Chg %</string>
    <string name="sort_by">Sort By</string>
    <string name="high_24h">High 24h</string>
    <string name="low_24h">Low 24h</string>
    <string name="volume">Volume</string>
    <string name="details">Details</string>
    <string name="hashing_algorithm">Hashing Algorithm</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="update_interval">Update Interval</string>
    <string name="favorite_coins">Favorite Coins</string>
    <string name="sign_out">Sign Out</string>
    <string-array name="sort_methods">
        <item>Market Cap Descending</item>
        <item>Market Cap Ascending</item>
        <item>Volume Descending</item>
        <item>Volume Ascending</item>
        <item>Name Descending</item>
        <item>Name Ascending</item>
        <item>Last Price Descending</item>
        <item>Last Price Ascending</item>
        <item>24h Change Descending</item>
        <item>24h Change Ascending</item>
    </string-array>
    <string-array name="update_intervals_str">
        <item>5 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>45 seconds</item>
        <item>60 seconds</item>
    </string-array>
</resources>
