<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CoinCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_grid_size">

        <ImageView
            android:id="@+id/coinImageView"
            android:layout_width="@dimen/small_image_view_size"
            android:layout_height="@dimen/small_image_view_size"
            android:contentDescription="@string/coin_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/coinTextView"
            style="@style/SmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_grid_size"
            app:layout_constraintBottom_toTopOf="@id/volumeTextView"
            app:layout_constraintStart_toEndOf="@id/coinImageView"
            app:layout_constraintTop_toTopOf="@id/coinImageView"
            tools:text="BTC" />

        <TextView
            android:id="@+id/currencyTextView"
            style="@style/CaptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_grid_size"
            android:text="@string/vs_usd"
            app:layout_constraintBottom_toBottomOf="@id/coinTextView"
            app:layout_constraintStart_toEndOf="@id/coinTextView" />

        <TextView
            android:id="@+id/volumeTextView"
            style="@style/CaptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_grid_size"
            app:layout_constraintBottom_toBottomOf="@id/coinImageView"
            app:layout_constraintStart_toStartOf="@id/coinTextView"
            app:layout_constraintTop_toBottomOf="@id/coinTextView"
            tools:text="Vol 3,461,072,646" />

        <TextView
            android:id="@+id/lastPriceTextView"
            style="@style/SmallTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/percentageTextView"
            app:layout_constraintEnd_toEndOf="@id/midEndGuideline"
            app:layout_constraintStart_toStartOf="@id/midStartGuideline"
            app:layout_constraintTop_toTopOf="@id/coinImageView"
            tools:text="$0.00099999" />

        <TextView
            android:id="@+id/percentageTextView"
            style="@style/CaptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_grid_size"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/coinImageView"
            app:layout_constraintEnd_toEndOf="@id/midEndGuideline"
            app:layout_constraintStart_toStartOf="@id/midStartGuideline"
            app:layout_constraintTop_toBottomOf="@id/lastPriceTextView"
            tools:text="-999.995%" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="@dimen/small_image_view_size"
            android:layout_height="@dimen/small_image_view_size"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/favorites"
            android:src="@drawable/ic_favorite_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/orange" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midStartGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/mid_guide_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midEndGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/mid_guide_end" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>